Fixed currencies not showing on pages other than search results

--- a/ares/styles/styles.css
+++ b/ares/styles/styles.css
@@ -225,8 +225,13 @@ select#adults {
 .hamburger {
     display: none;
 }
+.config-container{
+    display: none;
+}
 
-.config-container {
+.SearchHotels .config-container,
+.SinglePropDetail .config-container,
+.RootBody .config-container{
     background: #333;
     width: 100%;
     display: flex;
@@ -235,6 +240,7 @@ select#adults {
     position: relative;
     z-index: 10;
 }
+
 
 .config-container #CurrenciesContainer {
     margin-right: 24px;
@@ -294,7 +300,7 @@ select#adults {
 
 #currency-label {
     width: 200px;
-    display: none;
+    display: flex;
     justify-content: space-between;
 }
 
